# rust-api

./: .env  Cargo.toml  README.md  requests.http
migrations/: 0001_product_table.sql
src/: db.rs  error.rs  lib.rs  main.rs
src/domain/: product.rs
src/infra/: product_repository.rs
src/service/: product_service.rs
src/web/: mod.rs  routes.rs  types.rs
src/web/handlers/: product.rs
src/web/types/: product.rs
