[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
chrono = { version ="0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde","macros"] }

thiserror = "2.0.17"

[dev-dependencies]
tower = {  version ="0.5.2", features = ["util"] }
http-body-util = "0.1.3"